# stm32f446-blinky

./: .gitignore  Cargo.toml  README.md
.cargo/: config
src/: main.rs
