[package]
name = "stm32f446-blinky"
version = "0.1.0"
authors = ["Filip Wieland <filiplamparski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"

[dependencies.stm32f4xx-hal]
version = "0.5.0"
features = ["stm32f446", "rt"]